--- a/demo/config.toml
+++ b/demo/config.toml
@@ -8,7 +8,7 @@ DefaultContentLanguage = "en"
 enableInlineShortcodes = true
 footnoteReturnLinkContents = "^"
 
-theme = "theme"
+theme = "mdnb"
 
 [menu]
 
