--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-  "name": "hugo-theme-boilerplate",
+  "name": "mdnb",
   "version": "0.1.0",
   "description": "",
   "private": true,
   "scripts": {
     "build": "run-s build:theme build:demo build:doc",
-    "build:demo": "hugo --source demo --destination ../dist/demo --themesDir ../dist",
+    "build:demo": "hugo --source demo --destination ../dist/demo --themesDir ../dist --theme theme",
     "build:theme": "webpack --env.prod",
     "build:theme:debug": "webpack",
     "build:doc": "hugo --source doc --destination ../dist/doc",
-    "dev": "run-s build:theme:debug dev:start",
+    "dev": "run-s build:theme dev:start",
     "dev:start": "run-p dev:theme dev:demo",
-    "dev:demo": "hugo serve --source demo --destination ../dist/demo --themesDir ../dist --layoutDir ../layouts",
+    "dev:demo": "hugo serve --source demo --destination ../dist/demo --themesDir ../dist --theme theme --layoutDir ../layouts",
     "dev:theme": "webpack -w --env.hot",
     "dev:doc": "hugo serve --source doc",
     "lint": "run-s lint:eslint lint:stylelint lint:prettier",
-    "lint:eslint": "eslint **/*.js",
+    "lint:eslint": "eslint src/*.js *.js",
     "lint:stylelint": "stylelint **/*.scss",
     "lint:prettier": "prettier --check **/*.scss **/*.js **/*.json **/*.md",
     "format": "run-s format:prettier format:eslint format:stylelint",
-    "format:eslint": "eslint --fix **/*.js",
+    "format:eslint": "eslint --fix src/*.js *.js",
     "format:prettier": "prettier --write **/*.scss **/*.js **/*.json **/*.md",
     "format:stylelint": "stylelint --fix **/*.scss"
   },
   "author": "Lior Kummer",
   "license": "GPL-3.0",
   "devDependencies": {
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^4.2.1",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-webpack-plugin": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "^6.0.0",
-    "hugo-bin": "^0.59.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "hugo-bin": "^0.62.3",
+    "mini-css-extract-plugin": "^0.10.0",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "sass-loader": "^8.0.2",
-    "stylelint": "^13.2.0",
-    "stylelint-config-prettier": "^8.0.1",
+    "sass-loader": "^9.0.3",
+    "stylelint": "^13.6.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.14.2",
-    "stylelint-webpack-plugin": "^1.2.3",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
+    "stylelint-webpack-plugin": "^2.1.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
