--- a/demo/config.toml
+++ b/demo/config.toml
@@ -7,6 +7,7 @@ languageCode = "en"
 DefaultContentLanguage = "en"
 enableInlineShortcodes = true
 footnoteReturnLinkContents = "^"
+summaryLength = 30
 
 theme = "mdnb"
 
