--- a/doc/config.toml
+++ b/doc/config.toml
@@ -1,4 +1,4 @@
-baseURL = ""
+baseURL = "https://amitkummer.github.io/webpack-mdnb/"
 title = "webpack-mdnb"
 languageCode = "en"
 DefaultContentLanguage = "en"
