Change baseURL 3rd time only for the doc site this time

--- a/doc/config.toml
+++ b/doc/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://amitkummer.github.io/webpack-mdnb/doc"
+baseURL = "https://amitkummer.github.io/webpack-mdnb/"
 title = "webpack-mdnb"
 languageCode = "en"
 DefaultContentLanguage = "en"
