Add link to project's github repo in footer

--- a/demo/config.toml
+++ b/demo/config.toml
@@ -15,6 +15,7 @@ theme = "mdnb"
   [params.footer]
     title = "About"
     text = "Woah! There is a customizeable 'about' section. This section should be about 2 -3 secntences long but the theme handles 'about' sections of any length just right."
+    github = "https://github.com/amitkummer/webpack-mdnb"
 
 [menu]
 
