--- a/.github/workflows/delivery.yml
+++ b/.github/workflows/delivery.yml
@@ -20,6 +20,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: lint
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
